codama-macros/tests/codama_attribute/node_directive/type_nodes/public_key_type_node/with_input.fail.rs
use codama::codama;

#[codama(node(public_key_type(foo = 42)))]
pub struct Test;

fn main() {}
